--- a/SpaceJump/en.lproj/MainStoryboard.storyboard
+++ b/SpaceJump/en.lproj/MainStoryboard.storyboard
@@ -63,7 +63,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="kcU-IP-YTu">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="tapTutorial.png" id="kcU-IP-YTu">
                                 <rect key="frame" x="0.0" y="0.0" width="480" height="320"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -197,6 +197,9 @@
             <point key="canvasLocation" x="926" y="76"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="tapTutorial.png" width="480" height="320"/>
+    </resources>
     <classes>
         <class className="EAGLView" superclassName="UIView">
             <source key="sourceIdentifier" type="project" relativePath="./Classes/EAGLView.h"/>
